Add Exodrine Stimulant item with detailed description to the database

--- a/db/locales/en.json
+++ b/db/locales/en.json
@@ -4,6 +4,11 @@
       "Name": "Paracetamol painkillers ",
       "ShortName": "Paracetamol",
       "Description": "A widely used over-the-counter medication for reducing pain and fever."
+    },
+    "67352773c7d52bfd03002b6f": {
+      "Name": "Exodrine Stimulant",
+      "ShortName": "Exodrine",
+      "Description": "The Exodrine is an ultra-experimental military stimulant developed in secret by TerraGroup as part of their cutting-edge bioenhancement projects. Part of a range of TerraGroup's classified stimulants, the Exodrine is designed to push human endurance to their absolute limits, providing extraordinary boosts in physical strength, making it invaluable in high-stakes combat scenarios. However, its potent effects come at a severe cost, with unpredictable side effects that can leave the user debilitated after the stimulant wears off. \nNote: The Exodrine is still in an experimental phase, and due to its extreme physiological toll, it is recommended only for emergency battlefield use. TerraGroup is not responsible for any adverse effects resulting from the use of this product."
     }
   }
 }
